Add new routes for playlist
